# dhi-datalake

./: .gitignore  Makefile  OPERATIONS.md  README.md  configs.py  convert.py  load_to_iceberg.py  pyproject.toml
agents/: .env.example  graph.py  main.py  pyproject.toml
api/: .env.example  db.py  main.py
api/routers/: bhutan_telecom.py  drukair.py
api_agents/: graph.py  main.py  pyproject.toml
api_agents/tools/: bhutan_telecom.py  drukair.py
infrastructure/: .env.example  README.md  docker-compose.yml  setup.sh
infrastructure/trino/etc/: jvm.config
infrastructure/trino/etc/catalog/: iceberg.properties.template
mcp_server/: main.py  pyproject.toml  server.py
mcp_server/tools/: bhutan_telecom.py  drukair.py
