[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain-mcp-adapters>=0.2.2",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "trino>=0.337.0",
    "uvicorn>=0.44.0",
]

[tool.uv.workspace]
members = [
    "agents",
    "mcp_server",
]
